--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
-      --bg: #fff0f6;
-      --text: #5d3a3a;
-      --accent: #ffb6c1;
-      --headline: #ff69b4;
-      --link: #e75480;
-      --link-hover: #d6336c;
-    }
+  --bg: #fdf6f8;
+  --text: #4a3f3f;
+  --accent: #eeb5b5;
+  --headline: #d48fa5;
+  --link: #c77e8c;
+  --link-hover: #b46576;
+}
 
     * {
       margin: 0;
