--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
-  --bg: #fdf6f8;
-  --text: #4a3f3f;
-  --accent: #eeb5b5;
-  --headline: #d48fa5;
-  --link: #c77e8c;
-  --link-hover: #b46576;
+  --bg: #f9dbbd;
+  --text: #450920;
+  --accent: #a53860;
+  --headline: #da627d;
+  --link: #ffa5ab;
+  --link-hover: #a53860;
 }
 
     * {
@@ -157,7 +157,7 @@
 
     <!-- ✨ Footer -->
     <footer>
-      Made with 💘 by you for someone special
+      Made with love for my pookie
     </footer>
   </div>
 </body>
