--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>For Us 💖</title>
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600;700&display=swap" rel="stylesheet">
+  <!-- Changed font to Special Elite (cute typewriter style) -->
+  <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
   <style>
     :root {
-  --bg: #f9dbbd;
-  --text: #450920;
-  --accent: #a53860;
-  --headline: #da627d;
-  --link: #ffa5ab;
-  --link-hover: #a53860;
-}
+      --bg: #f9dbbd;
+      --text: #450920;
+      --accent: #a53860;
+      --headline: #da627d;
+      --link: #ffa5ab;
+      --link-hover: #a53860;
+    }
 
     * {
       margin: 0;
@@ -24,7 +25,7 @@
     body {
       background: var(--bg);
       color: var(--text);
-      font-family: 'Quicksand', sans-serif;
+      font-family: 'Special Elite', monospace;
       padding: 40px 20px;
       line-height: 1.6;
     }
@@ -92,7 +93,7 @@
     footer {
       margin-top: 60px;
       font-size: 14px;
-      color: var(--muted);
+      color: var(--accent);
     }
 
     ::selection {
@@ -121,7 +122,7 @@
     <div class="section">
       <div class="section-title">Our Memories</div>
       <div class="gallery">
-        <img src="images/photo1.jpg" alt="Memory 1">
+        <img src="bear.jpeg" alt="Memory 1">
         <img src="images/photo2.jpg" alt="Memory 2">
         <img src="images/photo3.jpg" alt="Memory 3">
         <img src="images/photo4.jpg" alt="Memory 4">
@@ -162,3 +163,4 @@
   </div>
 </body>
 </html>
+
