--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>For Us 💖</title>
+  <title>Lauren & Aidan</title>
   <!-- Changed font to Special Elite (cute typewriter style) -->
   <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
   <style>
@@ -105,17 +105,15 @@
 <body>
   <div class="container">
     <!-- 💖 Header -->
-    <h1>For You, My Love 💕</h1>
+    <h1>Lauren & Aidan</h1>
 
     <!-- 💌 Our Story -->
     <div class="section">
       <div class="section-title">Our Story</div>
       <p>
-        We met, we laughed, and we never stopped smiling since.  
-        You are my sunshine on cloudy days, my calm in chaos,  
-        my person. I made this little website for us 💗
+        I made this little website for us 💗
       </p>
-      <img src="images/first-date.jpg" alt="Our first date" width="300" style="border-radius: 12px;"/>
+      <img src="us.jpeg" alt="Our first date" width="300" style="border-radius: 12px;"/>
     </div>
 
     <!-- 📸 Gallery -->
@@ -123,34 +121,29 @@
       <div class="section-title">Our Memories</div>
       <div class="gallery">
         <img src="bear.jpeg" alt="Memory 1">
-        <img src="images/photo2.jpg" alt="Memory 2">
-        <img src="images/photo3.jpg" alt="Memory 3">
-        <img src="images/photo4.jpg" alt="Memory 4">
+        <img src="bbq.jpeg" alt="Memory 2">
+        <img src="floating.jpeg" alt="Memory 3">
+        <img src="noodle.jpeg" alt="Memory 4">
       </div>
     </div>
 
     <!-- 💬 Love Notes -->
     <div class="section">
       <div class="section-title">Love Notes</div>
-      <p>You make me a better person just by being yourself.</p>
-      <p>I'm so lucky I get to call you mine. 🥰</p>
-      <p>Even on your worst days, you're still everything to me.</p>
+      <p>I'm so lucky I get to call you my pookie.</p>
     </div>
 
     <!-- 🎁 Open When Buttons -->
     <div class="section">
       <div class="section-title">Open When...</div>
       <div class="love-buttons">
-        <button onclick="alert('Hey love, I know it’s a tough day. Take a deep breath. I love you ❤️')">
-          Open when you're sad
+        <button onclick="alert('Take a deep breath. I love you and am always here for you. ❤️')">
+          Open when you're anxious
         </button>
-        <button onclick="alert('You are doing amazing things, even if it doesn’t feel like it right now 🌟')">
-          Open when you're stressed
-        </button>
-        <button onclick="alert('I am proud of you. Always. 💪')">
+        <button onclick="alert('I am proud so proud of everything you do.')">
           Open when you need motivation
         </button>
-        <button onclick="alert('Look in the mirror. That’s the person I’m in love with 💖')">
+        <button onclick="alert('I wish you could see what I see in you. You are so amazing beyond all words can ever describe. 💖')">
           Open when you feel insecure
         </button>
       </div>
@@ -158,7 +151,7 @@
 
     <!-- ✨ Footer -->
     <footer>
-      Made with love for my pookie
+      MADE WITH LOVE FOR MY POOKIE
     </footer>
   </div>
 </body>
