--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Lauren & Aidan</title>
-  <!-- Changed font to Special Elite (cute typewriter style) -->
-  <link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
   <style>
     :root {
       --bg: #f9dbbd;
@@ -25,7 +24,7 @@
     body {
       background: var(--bg);
       color: var(--text);
-      font-family: 'Special Elite', monospace;
+      font-family: 'Nanum Pen Script', cursive;
       padding: 40px 20px;
       line-height: 1.6;
     }
