--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       cursor: pointer;
       font-size: 14px;
       transition: background 0.3s ease;
+      font-family: 'Nanum Pen Script', cursive;
     }
 
     .love-buttons button:hover {
