--- a/index.html
+++ b/index.html
@@ -116,16 +116,17 @@
       <img src="us.jpeg" alt="Our first date" width="300" style="border-radius: 12px;"/>
     </div>
 
-    <!-- 📸 Gallery -->
-    <div class="section">
-      <div class="section-title">Our Memories</div>
-      <div class="gallery">
-        <img src="bear.jpeg" alt="Memory 1">
-        <img src="bbq.jpeg" alt="Memory 2">
-        <img src="floating.jpeg" alt="Memory 3">
-        <img src="noodle.jpeg" alt="Memory 4">
-      </div>
-    </div>
+<!-- 📸 Gallery Links -->
+<div class="section">
+  <div class="section-title">Our Memories</div>
+  <p>
+    Explore our favorite moments together 💕
+  </p>
+  <div class="gallery-nav">
+    <a href="yummyeats.html">🍜 Yummy Eats</a> |
+    <a href="silly.html">🤪 Silly Moments</a>
+  </div>
+</div>
 
     <!-- 💬 Love Notes -->
     <div class="section">
