--- a/yummyeats.html
+++ b/yummyeats.html
@@ -45,11 +45,10 @@
 <body>
   <div class="container">
     <a href="index.html" class="back-link">← Back to Home</a>
-    <h1>Yummy Eats</h1>
+    <h1>Yummy At Home Eats</h1>
     <div class="gallery">
-      <img src="yummy1.jpeg" alt="Yummy 1">
-      <img src="yummy2.jpeg" alt="Yummy 2">
-      <img src="yummy3.jpeg" alt="Yummy 3">
+      <img src="images/bbq.jpeg" alt="Yummy 1">
+      <img src="images/noodle.jpeg" alt="Yummy 2">
     </div>
   </div>
 </body>
