--- a/index.html
+++ b/index.html
@@ -125,6 +125,16 @@
   background-color: var(--link-hover);
   transform: translateY(-2px);
 }
+.love-link p {
+  color: var(--text);
+  text-decoration: none;
+  transition: color 0.3s ease, transform 0.2s ease;
+}
+
+.love-link p:hover {
+  color: var(--link-hover);
+  transform: scale(1.02);
+}
 
   </style>
 </head>
