--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@
 .link-buttons a {
   background-color: var(--accent);
   color: white;
-  padding: 10px 18px;
-  border-radius: 20px;
+  padding: 10px 20px;
+  margin: 10px;
+  border-radius: 8px;
   text-decoration: none;
   font-size: 16px;
   font-family: 'Nanum Pen Script', cursive;
